# spiki

./: .gitignore  Cargo.toml  LICENSE  README.md  RISK_REGISTER.md  SPEC.md  package.json
.github/workflows/: linux-smoke.yml  windows-smoke.yml
crates/spiki-core/: Cargo.toml
crates/spiki-core/src/: lib.rs  model.rs
crates/spiki-core/src/model/: common.rs  edit.rs  error.rs  mod.rs  search.rs  semantic.rs  workspace.rs
crates/spiki-core/src/runtime/: config.rs  error.rs  index.rs  languages.rs  mod.rs  plans.rs  state.rs  workspace.rs
crates/spiki-core/src/text/: edits.rs  files.rs  mod.rs  paths.rs  scan.rs  search.rs  spans.rs  types.rs
crates/spiki-core/tests/: phase1.rs
crates/spiki-daemon/: Cargo.toml
crates/spiki-daemon/src/: app.rs  main.rs  protocol.rs  semantic.rs  session.rs  tools.rs
docs/: README.md  architecture.md  development.md  language-profiles.md
launcher/: cli.mjs  daemon-bootstrap.mjs  mcp-bridge.mjs  runtime-paths.mjs  runtime.mjs
scripts/: build-daemon.mjs  cleanup-package.mjs  prepare-package.mjs
tests/: bootstrap-race.test.mjs  codex-integration.test.mjs  package-metadata.test.mjs  plugin-scaffold.test.mjs  program-exec.test.mjs  runtime-paths.test.mjs  windows-pipe-acl.ps1
tests/lib/: fake-lsp-server.mjs  test-env.mjs
