[workspace]
members = ["crates/spiki-core", "crates/spiki-daemon"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
blake3 = "1.8"
chrono = { version = "0.4", features = ["clock", "serde"] }
encoding_rs = "0.8"
globset = "0.4"
ignore = "0.4"
libc = "0.2"
notify = "8.2"
parking_lot = "0.12"
regex = "1.12"
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tempfile = "3.23"
thiserror = "2.0"
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1.18", features = ["serde", "v7"] }
