[package]
name = "spiki-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
libc.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
spiki-core = { path = "../spiki-core" }
